# delaunay_demo

./: CMakeLists.txt  README.md  notes.txt
data/shaders/: circle.frag  circle.vert  points.frag  points.vert  simple_phong.frag  simple_phong.vert  tris.frag  tris.vert
include/: delaunay.h  geometry.h
src/: CMakeLists.txt  camera.cpp  delaunay.cpp  geometry.cpp  gl.cpp  main.cpp
